--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -2,27 +2,44 @@
 
 .header-menuHamburguesa-container,
 .header-info-mobile,
-.idiomas-mobile {
+.idiomas-mobile,
+.portfolio-container-mobile {
   display: none;
 }
 
 header {
   background-color: black;
   display: grid;
-
-  grid-template-columns: 30% 70%;
-  padding: 20px;
+  font-size: 20px;
+  grid-template-columns: 20% 80%;
+  padding: 40px;
 
   color: white;
 
   .header-info-portfolio {
+    margin: auto 0;
+
     ul {
-      color: white;
+
       display: flex;
       justify-content: space-around;
+      padding: 0;
+      margin: 0;
 
       li {
         list-style: none;
+        cursor: pointer;
+
+        a {
+          text-decoration: none;
+          color: white;
+
+
+        }
+
+        &:hover {
+          background: linear-gradient(45deg, red, #800000, #400000, black);
+        }
       }
     }
   }
@@ -30,10 +47,16 @@ header {
   .header-nombre-portfolio {
     padding-right: 20px;
     margin-left: 10px;
+    width: fit-content;
 
     a {
       color: white;
       text-decoration: none;
+
+      p {
+        margin: 0;
+
+      }
     }
   }
 }
@@ -59,22 +82,23 @@ header {
     padding: 40px 80px;
 
     .seccion-fotoSobreMi {
-
+      margin: auto;
       grid-column: 1;
 
       .main-foto {
         padding: 20px 0;
 
         img {
-          width: 50%;
+          width: 60%;
         }
 
         .redes {
           padding-top: 20px;
 
           i {
-            font-size: 20px;
+            font-size: 25px;
             color: white;
+            padding: 10px;
           }
         }
       }
@@ -85,94 +109,172 @@ header {
 
       h2 {
         text-align: center;
-        padding-bottom: 20px;
+
       }
 
       p {
         text-align: left;
-        padding: 0 100px;
+        padding: 25px 100px;
         line-height: 30px;
         font-size: 18px;
+
+        &:nth-of-type(2) {
+          padding-top: 0;
+        }
+
       }
     }
   }
 
   .seccion2-desktop {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-
+    grid-template-columns: 1fr 1fr 1fr;
     background: linear-gradient(45deg, red, #800000, #400000, black);
-    padding: 80px;
+    padding: 0 80px 80px;
 
     ul {
+      grid-column: 2;
 
       li {
         padding: 20px 0;
         list-style: none;
         text-align: left;
+
+        i {
+          margin-right: 10px;
+        }
       }
 
       .titulo-instituto {
-        color: blue;
+        color: yellow;
+        padding-top: 0;
       }
     }
 
     h2 {
-      padding-bottom: 20px;
+
       text-align: center;
     }
 
-    h3 {
-      padding: 20px 0;
-    }
+
 
     p {
       text-align: left;
       padding: 0 100px;
+      margin: 0;
     }
 
-    .estudios {
-      grid-column: 1;
+    .primer-parrafo-estudios {
+      padding-top: 40px;
+    }
+
+    .estudios-especializaciones {
+      grid-column: 2;
+
     }
 
     .idiomas-desktop {
-      grid-column: 2;
+      grid-column: 3;
+
+
     }
   }
 
-  /* .portfolio-container {
-    padding-bottom: 80px;
-
-    p {
-      height: fit-content;
-      padding: 40px 0;
-    }
+  .estudios,
+  .sobreMi-container,
+  .portfolio-container-desktop,
+  .contacto-container,
+  .idiomas,
+  .estudios-especializaciones {
+    text-align: center;
+    width: 100%;
 
     h2 {
-      padding-top: 80px;
+      font-size: 30px;
+      position: relative;
+      padding-top: 50px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -5px;
+        /* Ajusta esto para controlar la posición vertical del subrayado */
+        transform: translateX(-50%);
+        width: 90px;
+        height: 2px;
+        /* Ajusta esto para controlar el grosor del subrayado */
+        background-color: red;
+        /* Cambia esto para cambiar el color del subrayado */
+        left: 50%;
+      }
     }
 
-  } */
-.carousel-item{
-  display: flex;
-  margin: auto;
-}
-  .cards-wrapper {
-    
+    i {
+      color: white;
+    }
+  }
 
-    .card {
-      display: flex;
-      width: 30%;
+  .carousel-inner {
+    padding: 5em;
 
-      img {
-        max-width: 80%;
-        max-height: 100%
+    .carousel-item {
+      max-width: 100%;
+
+      .cards-container {
+        display: flex;
+        justify-content: space-evenly;
+
+        .card {
+          max-width: calc(100%/3);
+          margin: 0 2em;
+          box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+          border: none;
+          border-radius: 0;
+          background-color: gray;
+          padding: 50px;
+
+          img {
+            max-width: 70%;
+            height: 110px;
+            margin: auto;
+          }
+        }
       }
     }
   }
 
+  .carousel-control-prev,
+  .carousel-control-next {
+    background-color: gray;
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+
+
+
+
   .contacto-container {
+    padding: 0 20px 20px;
     background: linear-gradient(45deg, red, #800000, #400000, black);
+
+    .redes {
+      padding: 20px 0;
+
+      a {
+        i {
+          font-size: 25px;
+          color: white;
+        }
+      }
+
+      p {
+        padding-top: 20px;
+      }
+    }
   }
 }
 
@@ -184,7 +286,7 @@ header {
 
   .header-info-portfolio,
   .proyecto-pig-game,
-  .idiomas-desktop {
+  .portfolio-container-desktop {
     display: none;
   }
 
@@ -249,7 +351,7 @@ header {
     flex-direction: column;
 
     position: fixed;
-    top: 39px;
+    top: 60px;
     color: white;
 
     ul {
@@ -322,14 +424,14 @@ header {
     .sobreMi-container,
     .portfolio-container,
     .contacto-container,
-    .idiomas-mobile {
+    .idiomas-mobile, .portfolio-container-mobile {
       text-align: center;
       padding: 50px 0;
       float: none;
       width: 100%;
 
       h2 {
-        font-size: 20px;
+        font-size: 30px;
         position: relative;
         padding-top: 10px;
 
@@ -353,83 +455,135 @@ header {
       }
     }
 
-    .estudios,
-    .idiomas-mobile {
-      /* background: linear-gradient(45deg, red, black); */
-      background: linear-gradient(45deg, red, #800000, #400000, black);
 
-      ul {
-        padding: 0px 0;
-        list-style: none;
+    .sobreMi-container {
+      display: flex;
+      flex-direction: column;
 
-        .titulo-instituto {
-          position: relative;
-          top: -15px;
-          padding-left: 90px;
-          color: blue;
-          font-weight: bold;
+      padding: 40px 10px;
+
+      .seccion-fotoSobreMi {
+
+        .main-foto {
+          padding: 20px 0;
+
+          img {
+            width: 60%;
+          }
+
+          .redes {
+            padding-top: 20px;
+
+            i {
+              font-size: 25px;
+              color: white;
+              padding: 10px;
+            }
+          }
+        }
+      }
+
+      .texto-sobreMi {
+
+
+        h2 {
+          text-align: center;
+
+
         }
 
         p {
-          padding: 10px 90px 0px;
-          position: relative;
-          top: -15px;
-        }
-
-        i {
-          padding-right: 15px;
-        }
-
-        li {
           text-align: left;
-          padding: 10px 60px;
+          padding: 25px 50px;
+          line-height: 30px;
+          font-size: 18px;
+
+          &:nth-of-type(2) {
+            padding-top: 0;
+          }
+
         }
       }
     }
 
-    .sobreMi-container,
+    .seccion2-desktop {
+      display: flex;
+      flex-direction: column;
+      background: linear-gradient(45deg, red, #800000, #400000, black);
+      padding: 0px;
+
+
+      .primer-parrafo-estudios {
+        padding-top: 40px;
+      }
+
+      .estudios-especializaciones {
+        grid-column: 2;
+
+      }
+
+      .idiomas-desktop {
+        grid-column: 3;
+
+
+      }
+    }
+
     .estudios,
-    .idiomas-mobile {
-      img {
-        padding: 30px 0;
-        width: 60%;
+    .estudios-especializaciones,
+    .idiomas-desktop, .portfolio-container-mobile {
+      p {
+        padding: 0 50px;
+        font-size: 18px;
       }
 
-      p {
-        padding: 20px 50px;
-        text-align: left;
+      h2 {
+        font-size: 30px;
       }
     }
 
-    .portfolio-container {
-      .proyectos-container {
-        padding: 0px 0px;
-      }
+    .estudios {
+      padding: 25px 0;
+    }
 
-      p {
-        padding: 20px 50px;
-        text-align: left;
-        color: white;
-      }
-
-      h3 {
-        padding: 20px 50px;
-        color: white;
-      }
-
-      a {
-        text-decoration: none;
-        color: black;
-      }
-
-      img {
-        width: 60%;
-        margin: 10px 0;
+    .estudios-especializaciones,
+    .idiomas-desktop {
+      h2 {
+        padding-top: 25px;
       }
     }
+
+    .idiomas-desktop {
+      padding-bottom: 40px;
+    }
+
+    .portfolio-container-mobile {
+      display: block;
+
+      .carousel-inner{
+        padding: 50px;
+
+        .card{
+          background-color: gray;
+          height: 300px;
+
+          img {
+            max-width: 70%;
+            height: 110px;
+            margin: auto;
+          }
+        }
+      }
+    }
+
+
+
+
+
 
     .contacto-container {
       margin-top: 20px;
+      padding-bottom: 0;
 
       .redes {
         padding: 40px 0;
